--- a/api/views/layout/main.pug
+++ b/api/views/layout/main.pug
@@ -4,12 +4,37 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+    script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
     title Document
     block head
       link(rel="stylesheet", href="/main.css")
   body
-    block body
-    .errors
-      - var errors = req.flash('error')
-      each error in errors
-        p= error
+    .container
+      .row
+        .top.col-md-4
+        .middle.col-md-4
+          h1 ENCORE
+          block body
+          br
+        
+          - var errors = req.flash('error')
+          if errors
+            each error in errors
+              .alert.alert-danger
+                div= error
+
+          - var infos = req.flash('info')
+          if infos
+            each info in infos
+              .alert.alert-info
+                div= info
+
+          - var successes = req.flash('success')
+          if successes
+            each success in successes
+              .alert.alert-success
+                div= success
+
+        .bottom.col-md-4
