ready to refresh email

--- a/api/views/layout/main.pug
+++ b/api/views/layout/main.pug
@@ -10,6 +10,7 @@ html(lang="en")
     title Document
     block head
       link(rel="stylesheet", href="/main.css")
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.slim.js" integrity="sha256-KaSi3am04I2b10TZZ7JqEYrnNk94r0QOeIY3PtwGR/M=" crossorigin="anonymous"></script>
   body
     .container
       .row
