login register 단순 수정

--- a/api/views/auth.pug
+++ b/api/views/auth.pug
@@ -24,6 +24,9 @@ block body
   p: a(href='/auth/google') Google로 로그인
   p: a(href='/auth/facebook') Facebook으로 로그인
 
+  h4 or sign Up?
+  p: a(href='/auth/register') 회원가입
+
   //- br
   //-
   //- form(method='POST' action='/auth/register')
