--- a/api/views/register.pug
+++ b/api/views/register.pug
@@ -19,3 +19,6 @@ block body
       label(for='confirm') Confirm Password
       input.form-control(type='password' id='confirm' placeholder='confirm password' name='confirm')
     button.btn.btn-primary(type='submit') 회원가입
+
+  h4 or Log In?
+  p: a(href='/auth') 로그인
