--- a/api/views/register.pug
+++ b/api/views/register.pug
@@ -1,24 +1,17 @@
 extends layout/main.pug
 
 block body
-  br
+  .Header
+    h1.Title Encore - Sign up
 
-  form(method='POST' action='/auth/register')
-    input(type='hidden' name='_csrf' value=csrfToken)
-    legend 회원가입
-    div.form-group
-      label(for='email') Email
-      input.form-control(type='text' id='email' placeholder='email' name='email')
-    div.form-group
-      label(for='username') UserName
-      input.form-control(type='text' id='username' placeholder='username' name='username')
-    div.form-group
-      label(for='password') Password
-      input.form-control(type='password' id='password' placeholder='password' name='password')
-    div.form-group
-      label(for='confirm') Confirm Password
-      input.form-control(type='password' id='confirm' placeholder='confirm password' name='confirm')
-    button.btn.btn-primary(type='submit') 회원가입
-
-  h4 or Log In?
-  p: a(href='/auth') 로그인
+  .Register
+    .Email_Register
+      form(method='POST' action='/auth/register')
+        input(type='hidden' name='_csrf' value=csrfToken)
+        input(type='text' placeholder='Email' name='email' autofocus)
+        input(type='text' placeholder='Username' name='username')
+        input(type='password' placeholder='Password' name='password')
+        input(type='password' placeholder='Confirm password' name='confirm')
+        button(type='submit') Sign up
+    .Signin_Register
+      a(href='/auth') Sign in
