css 색 일부 변경

--- a/api/views/auth.pug
+++ b/api/views/auth.pug
@@ -5,7 +5,7 @@ block append head
 
 block body
   .Header
-    span.Header_Location Cancel
+    span(onclick='window.close()').Header_Location Cancel
     h1.Title Encore - Sign in
 
   .Auth
