--- a/api/views/forgot.pug
+++ b/api/views/forgot.pug
@@ -2,7 +2,8 @@ extends layout/main.pug
 
 block body
   .Header
-    span.Header_Location Back
+    span.Header_Location 
+      a(href='/auth') Back
     h1.Title Encore - Reset Password
 
   .Forgot
