--- a/api/views/register.pug
+++ b/api/views/register.pug
@@ -2,6 +2,7 @@ extends layout/main.pug
 
 block body
   .Header
+    span(onclick='window.close()').Header_Location Cancel
     h1.Title Encore - Sign up
 
   .Register
