--- a/api/public/style.css
+++ b/api/public/style.css
@@ -21,7 +21,7 @@ body {
 }
 a {
   text-decoration: none;
-  color: black;
+  color: #ccc;
 }
 .Container {
   height: 100%;
@@ -140,24 +140,24 @@ button {
   transform: translateY(-50%);
 }
 .alert-danger {
-    background-color: #f2dede;
+    background-color: #cc181e;
     border-color: #ebccd1;
-    color: #a94442;
+    color: white;
 }
 .alert-info {
-    background-color: #d9edf7;
+    background-color: #2793e8;
     border-color: #bce8f1;
-    color: #31708f;
+    color: white;
 }
 .alert-success {
-    background-color: #dff0d8;
+    background-color: #559900;
     border-color: #d6e9c6;
-    color: #3c763d;
+    color: white;
 }
 .alert {
     padding: 15px;
     margin-bottom: 20px;
     border: 1px solid transparent;
-    border-radius: 4px;
+    /* border-radius: 4px; */
     text-align: center;
 }
